# ManifoldOptimization

./: .gitignore  CMakeLists.txt  main.cpp  optimization.cpp  optimization.h
